# sample-deep-insight-dev

./: .gitignore  ASSETS_LICENSE.md  CLAUDE.md  README.md
docs/features/: hitl-workflow.md
managed-agentcore/: .env.example  02_invoke_agentcore_runtime_vpc.py  README.md  agentcore_runtime.py
managed-agentcore/backup_hitl_20251210/: .env.example  01_extract_env_vars_from_cf.sh  02_invoke_agentcore_runtime_vpc.py  HITL_S3_FEEDBACK_SYSTEM.md  agentcore_runtime.py  builder.py  nodes.py
managed-agentcore/fargate-runtime/: requirements.txt
managed-agentcore/production_deployment/cloudformation/: phase1-infrastructure.yaml
managed-agentcore/production_deployment/docs/: CUSTOMIZATION.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_OUTPUTS.md  MULTI_REGION_DEPLOYMENT.md  PREREQUISITES.md
managed-agentcore/production_deployment/scripts/: README.md  check_prerequisites.sh
managed-agentcore/production_deployment/scripts/phase3/: 02_create_uv_env.sh  pyproject.toml
managed-agentcore/src/graph/: nodes.py
managed-agentcore/src/prompts/: coder.md  reporter.md  supervisor.md  validator.md
managed-agentcore/under_development/: a2a_hybrid_architecture.md  large_file_processing_architecture.md
self-hosted/: .env.example  README.md  main.py
self-hosted/backups/: main.py.bak  nodes.py.bak
self-hosted/managed-agentcore/: .env.example  .gitignore  01_create_agentcore_runtime_vpc.py  02_invoke_agentcore_runtime_vpc.py  agentcore_runtime.py  requirements.txt
self-hosted/setup/: pyproject.toml
setup/: pyproject.toml
src/tools/: bash_tool.py
(+54 files in other folders)
