[project]
name = "deep-insight-runtime"
version = "0.1.0"
description = "Deep Insight AgentCore Runtime Scripts"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.1",
    "strands-agents>=1.18.0",
    "bedrock-agentcore>=1.1.1",
    "bedrock-agentcore-starter-toolkit>=0.2.2",
    "python-dotenv==1.2.1",
    "pyyaml>=6.0",
    "termcolor==3.2.0",
    "aws-opentelemetry-distro==0.12.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain-core>=0.3.0",
]
